Error Mitigation/MagiCoder/Data/javax_print_attribute/javax_print_attributeOutputResult.txt
Sample: EnumSyntax_2
----------------------------------------------------------------
output:
./Data/javax_print_attribute/javaFiles/EnumSyntax_2.java:6: error: constructor EnumSyntax in class EnumSyntax cannot be applied to given types;
        EnumSyntax enumSyntax = new EnumSyntax() {
                                ^
  required: int
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: HashAttributeSet_5
----------------------------------------------------------------
stdout:
Before clear: javax.print.attribute.HashAttributeSet@4
After clear: javax.print.attribute.HashAttributeSet@0

================================================================

